--- a/site/ligma.html
+++ b/site/ligma.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<head >
-    <title>MAP</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+<head>
+  <title>MAP</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-   crossorigin=""></script>
-   <style>
-   li {
-    display: inline;
-    margin: 15px;
-  }</style>
+    crossorigin=""
+  />
+  <script src="leaflet.js"></script>
+  <style>
+    li {
+      display: inline;
+      margin: 15px;
+    }
+  </style>
 </head>
 <body>
-    <p style="text-align: center;">
-        Site για covid tracing.
-
-    </p>
-    <div>
-        <ul>
-            <li><a href="ligma.html">Map</a></li>
-            <li><a href="report.html">Δηλωση κρουσματος</a></li>
-            <li><a href="contacts.html">πιθανες επαφες</a></li>
-            <li><a href="user_settings.html">user settings</a></li>
-          </ul>
-    </div>
-    <div id="map" style="height: 350px;">
-        
-          
-    </div>
-    <script src= "coordinates.js"></script>
+  <p style="text-align: center">Site για covid tracing.</p>
+  <div>
+    <ul>
+      <li><a href="ligma.html">Map</a></li>
+      <li><a href="report.html">Δηλωση κρουσματος</a></li>
+      <li><a href="contacts.html">πιθανες επαφες</a></li>
+      <li><a href="user_settings.html">user settings</a></li>
+    </ul>
+  </div>
+  <div id="map" style="height: 350px"></div>
+  <script src="coordinates.js"></script>
 </body>
