--- a/site/searchPOItemp.html
+++ b/site/searchPOItemp.html
@@ -4,17 +4,20 @@
 </head>
 <body>
   <!-- action="http://localhost:4545/search" -->
-<!-- method="post" -->
-  <form name="searchForm" 
-    id="searchForm" enctype="multipart/form-data" >
+  <!-- method="post" -->
+  <form name="searchForm" id="searchForm" enctype="multipart/form-data">
     <input type="text" name="searchBar" id="searchBar" />
     <!-- <input type="button" name="sup" onclick="fetchSearchPOIs()"> -->
     <input type="submit" value="4" />
   </form>
   <script>
     document.getElementById("searchForm").addEventListener("submit", (ev) => {
-      console.log(document.getElementById("searchBar").value);
-
+      var type = document.getElementById("searchBar").value;
+      console.log(type);
+      fetch(`http://localhost:4545/api/pois?type=${type}`)
+        .then((res) => res.json())
+        .then((res) => console.log(res))
+        .catch((er) => console.error(er));
       ev.preventDefault();
     });
   </script>
