Added empty markers from poi search

--- a/site/ligma.html
+++ b/site/ligma.html
@@ -8,6 +8,9 @@
     crossorigin=""
   />
   <script src="leaflet.js"></script>
+  <!-- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script> -->
   <style>
     li {
       display: inline;
@@ -25,6 +28,10 @@
       <li><a href="user_settings.html">user settings</a></li>
     </ul>
   </div>
+<form name="searchForm" id="searchForm" >
+    <input type="text" name="searchBar" id="searchBar" />
+    <input type="submit" value="4" />
+  </form>
   <div id="map" style="height: 350px"></div>
   <script src="coordinates.js"></script>
 </body>
