--- a/new site/ligma.html
+++ b/new site/ligma.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head >
     <title>MAP</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -15,7 +16,7 @@
 </head>
 <body>
     <p style="text-align: center;">
-        Site για covid tracing.
+        Site for covid tracing.
 
     </p>
     <p id="sss">username_placehold</p>
@@ -33,8 +34,32 @@
     </div>
     <script src= "coordinates.js"></script>
     <script>
+        var greenicon = L.divIcon({html: "<div style=\"background-color:green;width: 100%;height: 100%;\"></div>"});
+        var orangeicon = L.divIcon({html: "<div style=\"background-color:orange;width: 100%;height: 100%;\"></div>"});
+        var redicon = L.divIcon({html: "<div style=\"background-color:red;width: 100%;height: 100%;\"></div>"});
+
+        function poi2icon(pi){
+            d = new Date();
+            let day = (7+ d.getDay() -1)%7;
+            let hour = d.getHours();
+            pop=pi.populartimes[day].data[hour];
+            
+            return pop < 33?greenicon: pop < 66? orangeicon : redicon;
+        }
+        
+
+        var marks = [];
         var favoriteMovie = sessionStorage.getItem('favoriteMovie');
         document.getElementById("sss").innerHTML = favoriteMovie;
-
+        axios.post('http://localhost:4545/poi', {})
+            .then(function (response) {
+                for(pooi of response.data){
+                cords = [pooi.coordinates.lat,pooi.coordinates.lng]
+                let h = L.marker (cords, {icon: poi2icon(pooi)}).addTo(map);
+                h.alt = pooi;
+                h.on('click', e=>{console.log(e.target.alt)});
+                marks.push(h)
+                }
+            })
     </script>
 </body>
