--- a/new site/login.html
+++ b/new site/login.html
@@ -80,8 +80,8 @@
       <p style="text-align:center" class="para">Login to your account now</p>
       <p style="text-align:center" >Enjoy the capabilities of our website by tracing your contacts,<br>
          searching for POIs near you location,declaring visits and many more.</p>
-        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><hr style = "position:absolute;left:61%;width: 320px;">
-        <p style="position:absolute;left:65%;font-size: 14.5px;">Covid Traces - Our Covid tracing Website</p>
+      </div><hr style = "position:absolute;top:0;right:0;width: 300px;">
+      <p style="position:absolute;top:0;right:0;font-size: 14.5px;">Covid Traces - Our Covid tracing Website</p>
       </div>
     
 </div>
