--- a/new site/signup.html
+++ b/new site/signup.html
@@ -105,8 +105,8 @@
     <p style="text-align:center" class="para">This is a website for Covid-19 contact tracing</p>
     <p style="text-align:center" class="pr"><span >Did you know: </span>Our website offers ways to declare a confirmed Covid-19 case <br>
        in order to inform and protect other users.</p>
-      </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><hr style = "position:absolute;left:61%;width: 320px">
-      <p style="position:absolute;left:65%">Covid Traces - Our Covid tracing Website</p>
+      </div><hr style = "position:absolute;top:0;right:0;width: 300px;">
+      <p style="position:absolute;top:0;right:0;font-size: 14.5px;">Covid Traces - Our Covid tracing Website</p>
     </div>
 
 
