--- a/new site/manager.html
+++ b/new site/manager.html
@@ -1,9 +1,14 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+<!DOCTYPE html>
+<head >
+<title>Manager Screen</title><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharttable.org/2.0.0/jquery.highchartTable-min.js" type="text/javascript"></script>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+<style>
+    
+</style>
+</head>
 
 <form id="fileform"  encytpe="multipart/form-data">
     <input type="file" name="jzon">
