--- a/new site/report.html
+++ b/new site/report.html
@@ -9,44 +9,7 @@
       display: inline;
       margin: 0px;
     }
-    .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 25;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .left {
-    left: 0;
-    background-color: rgb(255, 255, 255);
-  }
-  
-  .right {
-    right: 0;
-    background-color: #ECECEC;
-  }
-  .centered {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.centered img {
-  width: 20px;
-  border-radius: 20%;
-}
-.center_img {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+   
 .para2
 	{
         color: rgb(87, 87, 230);
@@ -70,7 +33,7 @@
     li a {
       color: white;
       text-align: center;
-      padding: 14px 16px;
+      padding: 0px 14px ;
       text-decoration: none;
     }
 
@@ -123,21 +86,15 @@
             <li class="menud"><a href="contacts.html">Possible Contacts</a></li>
             <li class="menud"><a href="user_settings.html">User Settings</a></li>
           </ul>
-    </div>
+    </div><br>
     
-    <div class="split right">
-    </div><hr style = "position:absolute;left:61%;width: 320px">
-    <p style="position:absolute;left:65%">Covid Traces - Our Covid tracing Website</p>
-    </div>
 
-    <div class="split left">
-     <div class="centered">
-     <p id="p1">report diagnosis</p>
-     <form id="covid_form" name="nice_form" method="post">
+    <div style= "border: solid;border-color: #333;">
+     <p id="p1" style="text-align:center">report diagnosis</p>
+     <form id="covid_form" name="nice_form" method="post" style="text-align:center">
        <input type="date" name="diagnosed">
        <input id="epibebaiosi" type="submit">
      </form>
-     </div>
     </div>
     <script>
       var favoriteMovie = sessionStorage.getItem('favoriteMovie');
