--- a/new site/contacts.html
+++ b/new site/contacts.html
@@ -120,7 +120,7 @@
   <p style="text-align: center;" class="para">Possible Contacts</p>
   <div style="text-align:center">
     <ul>
-      <li class="menud"><a href="ligma.html">Home</a></li>
+      <li class="menud"><a href="mapscreen.html">Home</a></li>
       <li class="menud"><a href="report.html">Covid Case Report</a></li>
       <li class="menud"><a href="contacts.html" class="active">Possible Contacts</a></li>
       <li class="menud"><a href="user_settings.html">User Settings</a></li>
