--- a/new site/login.html
+++ b/new site/login.html
@@ -129,7 +129,7 @@ function passfunc() {
                 document.getElementById("p2").innerHTML = "Wrong credentials were inserted!";
                 } else{
                     sessionStorage.setItem("favoriteMovie", JSON.stringify( response.data));
-                    window.location.replace("ligma.html");
+                    window.location.replace("mapscreen.html");
                 }
             })
             .catch(function (error) {
