--- a/new site/user_settings.html
+++ b/new site/user_settings.html
@@ -54,7 +54,7 @@ div.fixed {
   <p style="text-align: center;" class="para">User Settings</p>
     <div style="text-align:center">
         <ul>
-            <li><a href="ligma.html">Home</a></li>
+            <li><a href="mapscreen.html">Home</a></li>
             <li><a href="report.html">Covid Case Report</a></li>
             <li><a href="contacts.html">Possible Contacts</a></li>
             <li><a href="user_settings.html" class = "active">User Settings</a></li>
