--- a/new site/report.html
+++ b/new site/report.html
@@ -81,7 +81,7 @@
   <p style="text-align: center;" class="para">Covid Case Report</p>
     <div style="text-align:center">
         <ul>
-            <li class="menud"><a href="ligma.html">Home</a></li>
+            <li class="menud"><a href="mapscreen.html">Home</a></li>
             <li class="menud"><a href="report.html">Covid Case Report</a></li>
             <li class="menud"><a href="contacts.html">Possible Contacts</a></li>
             <li class="menud"><a href="user_settings.html">User Settings</a></li>
