--- a/new site/mapscreen.html
+++ b/new site/mapscreen.html
@@ -141,7 +141,7 @@ button:hover {
                 <input id="epibebaiosi" type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;">
             </form>
         </div>
-        <button onclick="hidepopup()" class="xbutton">x</button>
+        <button onclick="hidepopup()" >x</button>
     </div>
 
     <script src= "coordinates.js"></script>
