--- a/new site/manager.html
+++ b/new site/manager.html
@@ -59,7 +59,7 @@
         }
 
         hr {
-            width: 75%;
+            width: 60%;
             margin-left: auto;
             margin-right: auto;
         }
@@ -68,7 +68,7 @@
             color: rgb(255, 255, 255);
             font-size: 30px;
             font-weight: bold;
-            max-height: 1500px;
+            /*max-height: 1500px;*/
             background-color: rgb(87, 87, 230);
             margin: 0 auto;
             border-radius: 12px 12px 0px 0px;
@@ -103,7 +103,7 @@
   color: white;
 }
     tr:hover{
-        background-color: aquamarine;
+        background-color: rgb(240, 230, 94);
     }
     </style>
 </head>
@@ -111,51 +111,59 @@
 <body>
     <p style="text-align: center;" class="para">Admin Settings</p>
     
-
+    <p style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Upload files from here by choosing the file and submiting it.</p>
 
     <form id="fileform" encytpe="multipart/form-data" style="text-align:center">
-        <label style="float: right;left: 67%;position: absolute;">(This is used to upload files!)</label>
         <input type="file" name="jzon" >
-        <input type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;">
-    </form><br><br>
+        <input type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;border-color:rgb(87, 87, 230)">
+    </form><br><hr style="color: rgb(23, 66, 94);">
 
-    <p style="text-align:center">DANGER! THIS DELETES EVERY POI IN THE DATABASE!</p>
-    <form id="redbutton" encytpe="multipart/form-data" style="text-align:center">
-        <input type="submit" value="X" style="float: right;left: 67%;position: absolute;">
-    </form>
+    <p style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">DANGER!This button deletes all the POIs And Visits in the database!</p>
+    <form id="redbutton" encytpe="multipart/form-data" style="text-align:center;" >
+        <input type="submit" value="X" style="text-align:center;width: 300px;color: white;border-radius: 10px;transition: all .5s;background-color:  rgb(182, 29, 29);border-color: rgb(182, 29, 29);">
+    </form><br><hr style="color: rgb(23, 66, 94);">
 
-    <p style="text-align:center">Total visits:</p>
+    <p style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Number of total Visits,Cases and dangerous Visits:</p>
+    <p style="text-align:center">Total  number of Visits:</p>
     <p id="tv" style="text-align:center"></p>
-    <p style="text-align:center">Total cases:</p>
+    <p style="text-align:center">Total number of Cases:</p>
     <p id="cc" style="text-align:center"></p>
-    <p style="text-align:center">Total dangerous visits:</p>
-    <p id="dv" style="text-align:center"></p>
+    <p style="text-align:center">Total number of dangerous Visits:</p>
+    <p id="dv" style="text-align:center"></p><br>
 
+    <p style="text-align:center;font-weight: bold;color: black;font-size: small;">Table 1.1: Number of visits for the various types of POIs.</p>
+    <div id="visTable"></div><br><br>
 
+    <p style="text-align:center;font-weight: bold;color: black;font-size: small;">Table 1.2: Number of dangerous visits for the various types of POIs.</p>
+    <div id="dangerTable"></div><br><br><hr style="color: rgb(23, 66, 94);">
 
-    <div id="visTable"></div><br>
-    <div id="dangerTable"></div>
+    <p style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Choose the date range(month,week) of the  tables and diagramms:</p>
 
-    <form id="dateradio">
+    <form id="dateradio" style="text-align:center">
         <input id="monradio" type="radio" name="dra" value="month">
         <label for="monradio">Month</label>
         <input id="weekradio" type="radio" name="dra" value="week">
         <label for="weekradio">Week</label>
-        <input type="submit" value="submit">
-    </form>
+        <input type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;border-color:rgb(87, 87, 230)">
+    </form><br>
+    <p style="text-align:center;font-weight: bold;color: black;font-size: small;">Diagramm 1.1: Number of visits (blue color) and confirmed Covid cases visits (red color).</p>
 
-    <div id="timeTable"></div>
-    <!---hour form-->
-    <form id="hour_form" name="nice_form" method="post">
-        <input type="date" name="calendar">
-        <input id="epibebaiosi" type="submit">
-    </form>
+    <div id="timeTable"></div><br><hr style="color: rgb(23, 66, 94);">
+
+    <!---hour form-->   
+    <p style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Choose the date range (hour) of the  tables and diagramms:</p>
+    <form id="hour_form" name="nice_form" method="post" style="text-align:center">
+        <input type="date" name="calendar" style="border-radius: 25px;">
+        <input id="epibebaiosi" type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;border-color:rgb(87, 87, 230)">
+    </form><br>
+    <p style="text-align:center;font-weight: bold;color: black;font-size: small;">Diagramm 1.2: Number of hourly visits (blue color) and confirmed Covid cases hourly visits (red color).</p>
     <div id="hourTable"></div>
 
 
 
     <script>
         typeheads = ["Types of POIs", "Visits"];
+        dtypeheads = ["Types of POIs", "DangerousVisits"];
         grapheads = ["Date", "Visits", "Covid Visits"];
         hourheads = ["Hour", "Visits", "Covid Visits"];
 
@@ -166,7 +174,7 @@
                 document.getElementById("cc").innerHTML = stats.b;
                 document.getElementById("dv").innerHTML = stats.c;
                 document.getElementById("visTable").appendChild(maketable(stats.d, typeheads));
-                document.getElementById("dangerTable").appendChild(maketable(stats.e, typeheads));
+                document.getElementById("dangerTable").appendChild(maketable(stats.e, dtypeheads));
             })
 
         var vorm = document.getElementById('dateradio');
