--- a/new site/signup.html
+++ b/new site/signup.html
@@ -5,7 +5,7 @@
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
     
-  body {background-color: #E0E0E0; font-family: 'Asap';}
+  body { font-family: 'Asap';}
     .button {
   background-color: rgb(87, 87, 230);
   border: none;
@@ -20,44 +20,7 @@
   border-radius: 25px;
    }
 
-    .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .left {
-    left: 0;
-    background-color: rgb(255, 255, 255);
-  }
-  
-  .right {
-    right: 0;
-    background-color: #ECECEC;
-  }
-  .centered {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 
-.centered img {
-  width: 20px;
-  border-radius: 20%;
-}
-.center_img {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 .para
 	{
         color: rgb(87, 87, 230);
@@ -74,14 +37,28 @@
         color: rgb(87, 87, 230);
 	      font-size: 13px;	
 	}
+  .para3 {
+      color: rgb(255, 255, 255);
+      font-size: 30px;
+      font-weight: bold;
+      /*max-height: 1500px;*/
+      background-color: rgb(87, 87, 230);
+      margin: 0 auto;
+      border-radius: 12px 12px 12px 12px;
+    }
+    hr {
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
   
 </head>
 
-<div class="split left">
-<div class="centered">
-<p id="p1" class="para">SignUp</p><br><br>
-<form id="log_form" name="nice_form" method="post">
+<p style="text-align: center;" class="para3">Covid Traces</p>
+
+<p id="p1" class="para" style="font-family: 'Asap';text-align: center;">SignUp</p><br><br>
+<form id="log_form" name="nice_form" method="post"  style="text-align: center">
     Username:
     <input name="user" type="text"><br><br><br>
     Password:
@@ -93,21 +70,13 @@
 
     <input id="epibebaiosi" type="submit" class="button" value="Submit"><br><br>
 
-    <img  style="float: left; margin: 0px 10px 10px 0px;" src="exclamation.png" alt="exclamation">
-    <p1>If you already have an account, please visit the Login page down below.</p1><br><br>
+    <p1 style="font-size: small;">If you already have an account, please visit the Login page down below.</p1><br><br>
     <a href="login.html">Login</a>
-</form></div>
-</div>
-
-<div class="split right">
-    <img src="distance.png"  width="150" height="150" alt="search" class="center_img">
-    <div class="centered"><br><br><br><br>
-    <p style="text-align:center" class="para">This is a website for Covid-19 contact tracing</p>
-    <p style="text-align:center" class="pr"><span >Did you know: </span>Our website offers ways to declare a confirmed Covid-19 case <br>
+</form><br><br><br><br><br><br><br><br><br><br><br><br><br><hr style="color: rgb(23, 66, 94);">
+    <p style="text-align:center ;font-size: larger;color: rgb(87, 87, 230);">This is a website for Covid-19 contact tracing</p>
+    <p style="text-align:center;font-size: small;"  class = "pr"><span >Did you know: </span>Our website offers ways to declare a confirmed Covid-19 case <br>
        in order to inform and protect other users.</p>
-      </div><hr style = "position:absolute;top:0;right:0;width: 300px;">
-      <p style="position:absolute;top:0;right:0;font-size: 14.5px;">Covid Traces - Our Covid tracing Website</p>
-    </div>
+    
 
 
 <script>
