some of the final changes

--- a/new site/contacts.html
+++ b/new site/contacts.html
@@ -5,6 +5,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
+    /*css*/
     li.menud{
       display: inline;
       margin: 0px;
@@ -84,6 +85,7 @@
   
   <p id="p1" style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Here is a list of visits you made that an another Covid case had had too in a span of 7 days.</p>
   <p id="p1" style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: small;">This is used in order to track your visits and possible dangerous contacts you may have had.</p><br>
+  <!--contacts list-->
   <ol id="threats"></ol>
 
   <script>
