--- a/new site/report.html
+++ b/new site/report.html
@@ -4,6 +4,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
+    /*css*/
     body {background-color: #E0E0E0; font-family: 'Asap';}
     li.menud{
       display: inline;
@@ -86,7 +87,7 @@
 
     <div >
      <p id="p1" style="text-align:center;font-weight: bold;color: rgb(23, 66, 94);font-size: larger;">Filling the following form you are reporting that you are a Covid-19 case in the website's database!</p><br>
-     
+     <!--report form-->
      <form id="covid_form" name="nice_form" method="post" style="text-align:center">
        <input type="date" name="diagnosed" style="border-radius: 25px;">
        <input id="epibebaiosi" type="submit" value="Submit" style="border-radius: 25px;background-color: rgb(87, 87, 230);color: #ffffff;border-color:rgb(87, 87, 230)">
