--- a/new site/signup.html
+++ b/new site/signup.html
@@ -4,7 +4,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
-    
+    /*css*/
   body { font-family: 'Asap';}
     .button {
   background-color: rgb(87, 87, 230);
@@ -19,8 +19,6 @@
   cursor: pointer;
   border-radius: 25px;
    }
-
-
 .para
 	{
         color: rgb(87, 87, 230);
@@ -58,6 +56,7 @@
 <p style="text-align: center;" class="para3">Covid Traces</p>
 
 <p id="p1" class="para" style="font-family: 'Asap';text-align: center;">SignUp</p><br><br>
+<!--SignUp form-->
 <form id="log_form" name="nice_form" method="post"  style="text-align: center">
     Username:
     <input name="user" type="text"><br><br><br>
@@ -80,7 +79,7 @@
 
 
 <script>
-
+//function for visual encoding of password when inserting it
 function passfunc() {
   var x = document.getElementById("myInput");
   if (x.type === "password") {
@@ -89,7 +88,7 @@ function passfunc() {
     x.type = "password";
   }
 }
-
+//reference to specific part of the server for the communication.In this occation for the signup
     var vorm = document.getElementById('log_form');
     vorm.addEventListener('submit', function (ev) {
         let vormData = new FormData(vorm);
