Parameterized site location

--- a/new site/adminlogin.html
+++ b/new site/adminlogin.html
@@ -2,6 +2,7 @@
 <head >
   <title>Admin Login</title>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="serverlocation.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
     /*css*/
@@ -83,7 +84,7 @@ function passfunc() {
     vorm.addEventListener('submit', function (ev) {
         let vormData = new FormData(vorm);
         lmao = Object.fromEntries(vormData);
-        axios.post('http://localhost:4545/admin', lmao)
+        axios.post(servloc+'/admin', lmao)
             .then(function (response) {
                 console.log(response.data);
                 if(response.data==""){
