--- a/new site/index.html
+++ b/new site/index.html
@@ -2,6 +2,7 @@
 <head >
   <title>Login</title>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="serverlocation.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
     
@@ -122,7 +123,7 @@ function passfunc() {
     vorm.addEventListener('submit', function (ev) {
         let vormData = new FormData(vorm);
         lmao = Object.fromEntries(vormData);
-        axios.post('http://localhost:4545/login', lmao)
+        axios.post(servloc+'/login', lmao)
             .then(function (response) {
                 console.log(response.data);
                 if(response.data==""){
