--- a/new site/user_settings.html
+++ b/new site/user_settings.html
@@ -2,6 +2,7 @@
 <head >
   <title>User Settings</title>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="serverlocation.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
   <style>
     /*css*/
@@ -113,7 +114,7 @@ div.outset {border-style: outset;}
 
   
   //reference to specific part of the server for the communication.
-      axios.post('http://localhost:4545/mystory', { userid: favoriteMovie })
+      axios.post(servloc+'/mystory', { userid: favoriteMovie })
         .then(function (response) {
           console.log(response.data);
           /*for (threat of response.data.allvisits) {
@@ -155,7 +156,7 @@ div.outset {border-style: outset;}
             let vormData = new FormData(vorm);
             lmao = Object.fromEntries(vormData);
             lmao.userid = favoriteMovie;
-            axios.post('http://localhost:4545/settings', lmao)
+            axios.post(servloc+'/settings', lmao)
                 .then(function (response) {
                     console.log(response.data);
                     if(response.data==""){
